--- a/linux/autotool/mgw-builds/b64/lib/Makefile
+++ b/linux/autotool/mgw-builds/b64/lib/Makefile
@@ -112,8 +112,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = x86_64-unknown-linux-gnu
-host_triplet = x86_64-unknown-linux-gnu
+build_triplet = i686-pc-mingw32
+host_triplet = i686-pc-mingw32
 am__append_1 = free.c
 #am__append_2 = memchr.c
 am__append_3 = reallocarray.c
@@ -266,25 +266,25 @@ am__relativize = \
     dir1=`echo "$$dir1" | sed -e "$$sed_rest"`; \
   done; \
   reldir="$$dir2"
-ACLOCAL = ${SHELL} /home/ericksun/programming/linux/autotool/gnulib_use/b64/missing aclocal-1.14
+ACLOCAL = ${SHELL} /home/ericksun/programming/linux/autotool/mgw-builds/b64/missing aclocal-1.14
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
 APPLE_UNIVERSAL_BUILD = 0
 AR = ar
 ARFLAGS = cr
-AUTOCONF = ${SHELL} /home/ericksun/programming/linux/autotool/gnulib_use/b64/missing autoconf
-AUTOHEADER = ${SHELL} /home/ericksun/programming/linux/autotool/gnulib_use/b64/missing autoheader
-AUTOMAKE = ${SHELL} /home/ericksun/programming/linux/autotool/gnulib_use/b64/missing automake-1.14
+AUTOCONF = ${SHELL} /home/ericksun/programming/linux/autotool/mgw-builds/b64/missing autoconf
+AUTOHEADER = ${SHELL} /home/ericksun/programming/linux/autotool/mgw-builds/b64/missing autoheader
+AUTOMAKE = ${SHELL} /home/ericksun/programming/linux/autotool/mgw-builds/b64/missing automake-1.14
 AWK = gawk
-BITSIZEOF_PTRDIFF_T = 64
+BITSIZEOF_PTRDIFF_T = 32
 BITSIZEOF_SIG_ATOMIC_T = 32
-BITSIZEOF_SIZE_T = 64
-BITSIZEOF_WCHAR_T = 32
+BITSIZEOF_SIZE_T = 32
+BITSIZEOF_WCHAR_T = 16
 BITSIZEOF_WINT_T = 32
-CC = gcc -std=gnu11
+CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
-CPP = gcc -std=gnu11 -E
+CPP = gcc -E
 CPPFLAGS = 
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
@@ -292,10 +292,10 @@ DEPDIR = .deps
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
-EGREP = /usr/bin/grep -E
-EXEEXT = 
+EGREP = /bin/grep -E
+EXEEXT = .exe
 GL_CFLAG_ALLOW_WARNINGS = -Wno-error
-GL_CFLAG_GNULIB_WARNINGS =  -Wno-cast-qual -Wno-conversion -Wno-float-equal -Wno-sign-compare -Wno-undef -Wno-unused-function -Wno-unused-parameter -Wno-pedantic -Wno-sign-conversion -Wno-type-limits -Wno-unsuffixed-float-constants
+GL_CFLAG_GNULIB_WARNINGS =  -Wno-cast-qual -Wno-conversion -Wno-float-equal -Wno-sign-compare -Wno-undef -Wno-unused-function -Wno-unused-parameter -Wno-float-conversion -Wimplicit-fallthrough -Wno-pedantic -Wno-sign-conversion -Wno-type-limits -Wno-unsuffixed-float-constants
 GL_GNULIB_ACCESS = 0
 GL_GNULIB_ALIGNED_ALLOC = 0
 GL_GNULIB_ATOLL = 0
@@ -520,8 +520,8 @@ GL_GNULIB_WMEMPCPY = 0
 GL_GNULIB_WMEMSET = 0
 GL_GNULIB_WRITE = 0
 GL_GNULIB__EXIT = 0
-GNULIBHEADERS_OVERRIDE_WINT_T = 0
-GREP = /usr/bin/grep
+GNULIBHEADERS_OVERRIDE_WINT_T = 1
+GREP = /bin/grep
 HAVE_ALIGNED_ALLOC = 1
 HAVE_ATOLL = 1
 HAVE_BTOWC = 1
@@ -638,7 +638,7 @@ HAVE_SETSTATE = 1
 HAVE_SIGABBREV_NP = 1
 HAVE_SIGDESCR_NP = 1
 HAVE_SIGNED_SIG_ATOMIC_T = 1
-HAVE_SIGNED_WCHAR_T = 1
+HAVE_SIGNED_WCHAR_T = 0
 HAVE_SIGNED_WINT_T = 0
 HAVE_SLEEP = 1
 HAVE_STDINT_H = 1
@@ -659,7 +659,7 @@ HAVE_STRUCT_RANDOM_DATA = 1
 HAVE_STRVERSCMP = 1
 HAVE_SYMLINK = 1
 HAVE_SYMLINKAT = 1
-HAVE_SYS_BITYPES_H = 1
+HAVE_SYS_BITYPES_H = 0
 HAVE_SYS_INTTYPES_H = 0
 HAVE_SYS_LOADAVG_H = 0
 HAVE_SYS_PARAM_H = 0
@@ -707,7 +707,7 @@ HAVE_WMEMSET = 1
 HAVE__EXIT = 1
 INCLUDE_NEXT = include_next
 INCLUDE_NEXT_AS_FIRST_DIRECTIVE = include_next
-INSTALL = /usr/bin/install -c
+INSTALL = /bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
@@ -720,10 +720,10 @@ LIBGNU_LTLIBDEPS =
 LIBOBJS = 
 LIBS = 
 LIMITS_H = limits.h
-LOCALE_FR_UTF8 = fr_FR.UTF-8
+LOCALE_FR_UTF8 = none
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/ericksun/programming/linux/autotool/gnulib_use/b64/missing makeinfo
-MKDIR_P = /usr/bin/mkdir -p
+MAKEINFO = ${SHELL} /home/ericksun/programming/linux/autotool/mgw-builds/b64/missing makeinfo
+MKDIR_P = /bin/mkdir -p
 NEXT_AS_FIRST_DIRECTIVE_INTTYPES_H = <inttypes.h>
 NEXT_AS_FIRST_DIRECTIVE_LIMITS_H = <limits.h>
 NEXT_AS_FIRST_DIRECTIVE_STDDEF_H = <stddef.h>
@@ -754,13 +754,13 @@ PATH_SEPARATOR = :
 PRAGMA_COLUMNS = 
 PRAGMA_SYSTEM_HEADER = #pragma GCC system_header
 PRIPTR_PREFIX = __PRIPTR_PREFIX
-PTRDIFF_T_SUFFIX = l
+PTRDIFF_T_SUFFIX = 
 RANLIB = ranlib
 REPLACE_ACCESS = 0
 REPLACE_ALIGNED_ALLOC = 0
 REPLACE_BTOWC = 0
-REPLACE_CALLOC_FOR_CALLOC_GNU = 0
-REPLACE_CALLOC_FOR_CALLOC_POSIX = 0
+REPLACE_CALLOC_FOR_CALLOC_GNU = 1
+REPLACE_CALLOC_FOR_CALLOC_POSIX = 1
 REPLACE_CANONICALIZE_FILE_NAME = 0
 REPLACE_CHOWN = 0
 REPLACE_CLOSE = 0
@@ -801,8 +801,8 @@ REPLACE_LCHOWN = 0
 REPLACE_LINK = 0
 REPLACE_LINKAT = 0
 REPLACE_LSEEK = 0
-REPLACE_MALLOC_FOR_MALLOC_GNU = 0
-REPLACE_MALLOC_FOR_MALLOC_POSIX = 0
+REPLACE_MALLOC_FOR_MALLOC_GNU = 1
+REPLACE_MALLOC_FOR_MALLOC_POSIX = 1
 REPLACE_MBRLEN = 0
 REPLACE_MBRTOWC = 0
 REPLACE_MBSINIT = 0
@@ -835,7 +835,7 @@ REPLACE_READLINK = 0
 REPLACE_READLINKAT = 0
 REPLACE_REALLOCARRAY = 0
 REPLACE_REALLOC_FOR_REALLOC_GNU = 0
-REPLACE_REALLOC_FOR_REALLOC_POSIX = 0
+REPLACE_REALLOC_FOR_REALLOC_POSIX = 1
 REPLACE_REALPATH = 0
 REPLACE_RMDIR = 0
 REPLACE_SETENV = 0
@@ -888,7 +888,7 @@ REPLACE__EXIT = 0
 SET_MAKE = 
 SHELL = /bin/sh
 SIG_ATOMIC_T_SUFFIX = 
-SIZE_T_SUFFIX = ul
+SIZE_T_SUFFIX = u
 STDCKDINT_H = stdckdint.h
 STDDEF_H = stddef.h
 STDINT_H = stdint.h
@@ -903,11 +903,11 @@ VERSION = 1.0
 WCHAR_T_SUFFIX = 
 WINDOWS_64_BIT_OFF_T = 0
 WINDOWS_STAT_INODES = 0
-WINT_T_SUFFIX = u
-abs_builddir = /home/ericksun/programming/linux/autotool/gnulib_use/b64/lib
-abs_srcdir = /home/ericksun/programming/linux/autotool/gnulib_use/b64/lib
-abs_top_builddir = /home/ericksun/programming/linux/autotool/gnulib_use/b64
-abs_top_srcdir = /home/ericksun/programming/linux/autotool/gnulib_use/b64
+WINT_T_SUFFIX = 
+abs_builddir = /home/ericksun/programming/linux/autotool/mgw-builds/b64/lib
+abs_srcdir = /home/ericksun/programming/linux/autotool/mgw-builds/b64/lib
+abs_top_builddir = /home/ericksun/programming/linux/autotool/mgw-builds/b64
+abs_top_srcdir = /home/ericksun/programming/linux/autotool/mgw-builds/b64
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -915,33 +915,33 @@ am__quote =
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
 bindir = ${exec_prefix}/bin
-build = x86_64-unknown-linux-gnu
+build = i686-pc-mingw32
 build_alias = 
-build_cpu = x86_64
-build_os = linux-gnu
-build_vendor = unknown
+build_cpu = i686
+build_os = mingw32
+build_vendor = pc
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-gl_LIBOBJDEPS = 
-gl_LIBOBJS = 
-gl_LTLIBOBJS = 
+gl_LIBOBJDEPS =  ./$(DEPDIR)/calloc.Po ./$(DEPDIR)/malloc.Po ./$(DEPDIR)/realloc.Po
+gl_LIBOBJS =  calloc.o malloc.o realloc.o
+gl_LTLIBOBJS =  calloc.lo malloc.lo realloc.lo
 gltests_LIBOBJDEPS = 
 gltests_LIBOBJS = 
 gltests_LTLIBOBJS = 
 gltests_WITNESS = IN_B64_GNULIB_TESTS
-host = x86_64-unknown-linux-gnu
+host = i686-pc-mingw32
 host_alias = 
-host_cpu = x86_64
-host_os = linux-gnu
-host_vendor = unknown
+host_cpu = i686
+host_os = mingw32
+host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/ericksun/programming/linux/autotool/gnulib_use/b64/install-sh
+install_sh = ${SHELL} /home/ericksun/programming/linux/autotool/mgw-builds/b64/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -2253,7 +2253,7 @@ mostlyclean-local: mostlyclean-generic
 	:
 distclean-local: distclean-gnulib-libobjs
 distclean-gnulib-libobjs:
-	-rm -f 
+	-rm -f  ./$(DEPDIR)/calloc.Po ./$(DEPDIR)/malloc.Po ./$(DEPDIR)/realloc.Po
 maintainer-clean-local: distclean-gnulib-libobjs
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
