--- a/makefile/examples-my/ch06/ch06-non-recursive/makefile
+++ b/makefile/examples-my/ch06/ch06-non-recursive/makefile
@@ -39,7 +39,8 @@ ifneq "$(MAKECMDGOALS)" "clean"
 endif
 
 %.c %.h: %.y
-	$(YACC.y) --defines $<
+	#$(YACC.y) --defines $<
+	$(YACC.y) -d $<
 	$(MV) y.tab.c $*.c
 	$(MV) y.tab.h $*.h
 
