--- a/makefile/examples-my/ch07/ch07-gcc-depend/makefile
+++ b/makefile/examples-my/ch07/ch07-gcc-depend/makefile
@@ -65,7 +65,8 @@ libraries: $(libraries)
 
 .PHONY: clean
 clean:
-	$(RM) -r *
+	$(RM) $(objects) $(programs) $(libraries) $(dependencies) 
+
 
 ifneq "$(MAKECMDGOALS)" "clean"
   -include $(dependencies)
@@ -81,6 +82,6 @@ endef
 	$(COMPILE.c) $(OUTPUT_OPTION) $<
 
 %.c %.h: %.y
-	$(YACC.y) --defines $<
+	$(YACC.y) -d $<
 	$(MV) y.tab.c $*.c
 	$(MV) y.tab.h $*.h
