--- a/makefile/examples-my/ch07/ch07-gcc-depend/makefile
+++ b/makefile/examples-my/ch07/ch07-gcc-depend/makefile
@@ -1,4 +1,6 @@
-SOURCE_DIR := ../ch07-separate-binaries
+#SOURCE_DIR := ../ch07-separate-binaries
+#SOURCE_DIR := ch07-gcc-depend
+SOURCE_DIR := ../
 
 # $(call source-to-object, source-file-list)
 source-to-object = $(subst .c,.o,$(filter %.c,$1)) \
