--- a/erlang/my_erlang/logger/handler/handler_formatter/Makefile
+++ b/erlang/my_erlang/logger/handler/handler_formatter/Makefile
@@ -9,10 +9,10 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=logger_1
-RUN_BIN=logger_1
+RUN_BIN=metadata
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
+	#erl -noshell -config sys_metadata -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
 	#erl -noshell -s nano_server start client -s init stop
 
