--- a/erlang/my_erlang/logger/filter/primary_filter_level/Makefile
+++ b/erlang/my_erlang/logger/filter/primary_filter_level/Makefile
@@ -9,10 +9,9 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=handler_filter_log_event_error_logger
+RUN_BIN=primary_filter_level
 all:compile
-	erl -noshell -kernel logger_sasl_compatible true -s $(RUN_BIN) start -s init stop
-
+	erl -noshell -s $(RUN_BIN) start -s init stop
 
 #erl -noshell -config sys_metadata -s $(RUN_BIN) start -s init stop
 #erl -noshell -run $(RUN_BIN) start -s init stop
