--- a/erlang/my_erlang/logger/metadata/report_cb/Makefile
+++ b/erlang/my_erlang/logger/metadata/report_cb/Makefile
@@ -9,13 +9,9 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=handler_filter_customer_1
+RUN_BIN=metadata
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
-
-#erl -noshell -config sys_metadata -s $(RUN_BIN) start -s init stop
-#erl -noshell -run $(RUN_BIN) start -s init stop
-#erl -noshell -s nano_server start client -s init stop
 
 
 compile:${MODS:%=%.beam} 
@@ -25,4 +21,8 @@ compile:${MODS:%=%.beam}
 #	erl -noshell -s $(RUN_BIN) start  -s init stop
 
 clean:
-	rm -f *.beam  erl_crash.dump
+	rm -f *.beam
+
+#erl -noshell -config sys_metadata -s $(RUN_BIN) start -s init stop
+#erl -noshell -run $(RUN_BIN) start -s init stop
+#erl -noshell -s nano_server start client -s init stop
