--- a/erlang/my_erlang/mnesia/erlang.mk/simple_cache/Makefile
+++ b/erlang/my_erlang/mnesia/erlang.mk/simple_cache/Makefile
@@ -3,7 +3,7 @@ PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
 
-DEPS = resource_discovery  simple_cache  recon mnesia_test
+DEPS = recon mnesia_test
 dep_recon = hex 2.5.4
 
 FORCE_REBUILD = $(DEPS)
