--- a/rabbitmq_erlang_client/rabbitmq-tutorials-erlang/tutorial/rpc/rebar.config
+++ b/rabbitmq_erlang_client/rabbitmq-tutorials-erlang/tutorial/rpc/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {amqp_client, "3.11.5"},
+    {amqp_client, "3.12.2"},
+    %%{uuid, "1.1.8"},
     {recon, "2.5.3"}
 ]}.
 
