--- a/linux/net_dev/tun-tap/Makefile
+++ b/linux/net_dev/tun-tap/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= tun  tap tap_name  tun_name
+BIN= tun  tap tap_name  tun_name tap_persistent
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $< -o $@ 
