--- a/network/netlink/netlink_kernel/example_arm_2025/user/Makefile
+++ b/network/netlink/netlink_kernel/example_arm_2025/user/Makefile
@@ -3,14 +3,14 @@
 CC = gcc
 CFLAGS = -Wall -g 
 LDFLAGS = 
-BIN = user_program
+BIN = netlink_for_loop
 BIN = netlink
 
 all: $(BIN)
 
-$(BIN):
+$(BIN):$(BIN).c
 	$(CC) $(CFLAGS) $(BIN).c  $(LDFLAGS) -o $@
 
 clean:
-	rm -f $(BIN) $(OBJ)
+	rm -f $(BIN) 
 
