--- a/rdma/socket/get_device_list/Makefile
+++ b/rdma/socket/get_device_list/Makefile
@@ -5,11 +5,15 @@ CFLAGS = -Wall -g -I/usr/include/infiniband
 #CFLAGS = -Wall -g -I/usr/include/
 LDFLAGS = -libverbs
 BIN = ibv_rc_pingpong 
+OBJ = pingpong.o
 
 all: $(BIN)
 
-$(BIN): rc_pingpong.c
+$(BIN): $(OBJ) rc_pingpong.c
 	$(CC) $(CFLAGS) rc_pingpong.c $(OBJ) $(LDFLAGS) -o $@
+
+$(OBJ): pingpong.c pingpong.h
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(BIN) $(OBJ)
